bad/assign_field_int_of_field_class.example_compiler_output
ERROR
[1mbad/assign_field_int_of_field_class.lat:12:16: [1;31merror: [0;1massigning to `int` from incompatible type `Y`[m
	(new D).c.fld = new Y;
	              [1;32m^[m
